--- a/app/assets/stylesheets/product/product-placing-page.scss
+++ b/app/assets/stylesheets/product/product-placing-page.scss
@@ -144,7 +144,7 @@
           }
           .product-detail {
             width: 400px;
-            .select-default {
+            select {
               width: 100%;
               height: 48px;
               padding: 0 16px;
