--- a/app/assets/stylesheets/product/product-placing-page.scss
+++ b/app/assets/stylesheets/product/product-placing-page.scss
@@ -206,7 +206,7 @@
             }
             .select-box {
               margin-top: 8px;
-              .select-default {
+              select {
                 width: 100%;
                 height: 48px;
                 padding: 0 16px;
