フォーム Pタグ

--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -15,12 +15,12 @@
                 必須
             %p 最大10枚までアップロードできます
             .dropbox
-              = f.file_field :image, class: "input-box" do
-                .texts
-                  %p
-                    ドロッグアンドドロップ
-                  %p
-                    またはクリックしてファイルをアップロード
+              = f.file_field :image, class: "input-box"
+              .texts
+                %p
+                  ドロッグアンドドロップ
+                %p
+                  またはクリックしてファイルをアップロード
           .product-contents
             .product-name 
               .product-name-header
