--- a/app/assets/stylesheets/product/product-placing-page.scss
+++ b/app/assets/stylesheets/product/product-placing-page.scss
@@ -56,6 +56,7 @@
             top: 0;
             left: 0;
             opacity: 0;
+            cursor: progress;
           }
           .texts {
             height: 100%;
