--- a/app/assets/stylesheets/product/product-placing-page.scss
+++ b/app/assets/stylesheets/product/product-placing-page.scss
@@ -187,6 +187,13 @@
               font-size: 14px;
               font-weight: bold;
             }
+            // a.link {
+            //   background-color: tomato;
+            //   border-radius: 50%;
+            //   display: block;
+            //   height: 15px;
+            //   width: 15px;
+            // }
           }
           .transportation-detail {
             width: 400px;
