--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -40,7 +40,7 @@
         %ul
           %li
             .main-contents-box
-              %a.contents-item{href: "#"}
+              = link_to "#", class: "contents-item"
                 .contents-item__image
                   .contents-item__image--price
                     %span ¥1,000
@@ -55,7 +55,7 @@
         %ul
           %li
             .main-contents-box
-              %a.contents-item{href: "#"}
+              = link_to "#", class: "contents-item"
                 .contents-item__image
                   .contents-item__image--price
                     %span ¥1,000
@@ -70,7 +70,7 @@
         %ul
           %li
             .main-contents-box
-              %a.contents-item{href: "#"}
+              = link_to "#", class: "contents-item"
                 .contents-item__image
                   .contents-item__image--price
                     %span ¥1,000
@@ -99,7 +99,7 @@
         %ul
           %li
             .main-contents-box
-              %a.contents-item{href: "#"}
+              = link_to "#", class: "contents-item"
                 .contents-item__image
                   .contents-item__image--price
                     %span ¥1,000
@@ -108,7 +108,7 @@
                     %span 粉雪舞う季節はいつもすれ違い人混みに紛れても同じ空見てるのに。風に吹かれて似たように凍えるのに。些細な言い合いもなくてララライララライ
           %li
             .main-contents-box
-              %a.contents-item{href: "#"}
+              = link_to "#", class: "contents-item"
                 .contents-item__image
                   .contents-item__image--price
                     %span ¥1,000
@@ -117,7 +117,7 @@
                     %span テスト
           %li
             .main-contents-box
-              %a.contents-item{href: "#"}
+              = link_to "#", class: "contents-item"
                 .contents-item__image
                   .contents-item__image--price
                     %span ¥1,000
@@ -126,7 +126,7 @@
                     %span テスト
           %li
             .main-contents-box
-              %a.contents-item{href: "#"}
+              = link_to "#", class: "contents-item"
                 .contents-item__image
                   .contents-item__image--price
                     %span ¥1,000
@@ -135,7 +135,7 @@
                     %span テスト
           %li
             .main-contents-box
-              %a.contents-item{href: "#"}
+              = link_to "#", class: "contents-item"
                 .contents-item__image
                   .contents-item__image--price
                     %span ¥1,000
@@ -150,7 +150,7 @@
         %ul
           %li
             .main-contents-box
-              %a.contents-item{href: "#"}
+              = link_to "#", class: "contents-item"
                 .contents-item__image
                   .contents-item__image--price
                     %span ¥1,000
@@ -165,7 +165,7 @@
         %ul
           %li
             .main-contents-box
-              %a.contents-item{href: "#"}
+              = link_to "#", class: "contents-item"
                 .contents-item__image
                   .contents-item__image--price
                     %span ¥1,000
@@ -180,7 +180,7 @@
         %ul
           %li
             .main-contents-box
-              %a.contents-item{href: "#"}
+              = link_to "#", class: "contents-item"
                 .contents-item__image
                   .contents-item__image--price
                     %span ¥1,000
